docs/archive/azure-kubernetes-archived/kubernetes/azure-aks-config.yaml
# Azure AKS-specific Kubernetes configurations

---
# Azure Application Gateway Ingress
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: azure-application-gateway
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: azure/application-gateway
